<resources>
    <string name="app_name">Major Project</string>
    <string name="mobility_companies_heading">Mobility Companies</string>
    <string name="crm_companies_heading">CRM Companies</string>
    <string name="cloud_companies_heading">Cloud services Companies</string>
    <string name="collaboration_companies_heading">Collaboration Tools Companies</string>
    <string name="communication_companies_heading">Communication Companies</string>
    <string name="advertisement_companies_heading">Advertisement Companies</string>
    <string name="payment_companies_heading">Payment Companies</string>
    <string name="trading_companies_heading">Trading Companies</string>
    <string name="investment_companies_heading">Investment Banks</string>
    <string name="gaming_companies_heading">Gaming Companies</string>
    <string name="entertainment_companies_heading">Entertainment Companies</string>
    <string name="system_design_heading">System Design</string>
    <string name="programming_languages_heading">Programming Languages</string>
    <string name="dsa_heading">Data Structures and Algorithms</string>
    <string name="oops_heading">Object Oriented Programming</string>
    <string name="dbms_heading">Database Management System</string>
    <string name="os_heading">Operating System</string>
    <string name="se_heading">Software Engineering</string>
    <string name="cn_heading">Computer Networks</string>
    <string name="github_heading">GitHub</string>
    <string name="sde_sheet_heading">SDE Sheet</string>
    <string name="web_development_heading">Web Development</string>
    <string name="leetcode_solutions_heading">Leetcode Solutions</string>
    <string name="coding_practices_heading">Coding Patterns and Practices</string>
    <string name="tips_heading">Tips</string>
    <string name="questions_heading">Most Important Coding Questions</string>
    <string name="c_programming_heading">C Programming</string>
    <string name="cpp_programming_heading">C++ Programming</string>
    <string name="java_programming_heading">Java Programming</string>
    <string name="python_programming_heading">Python Programming</string>
    <string name="dbms_resources_heading">DBMS Resources</string>
    <string name="sql_resources_heading">SQL Resources</string>
    <string name="html_and_css_heading">HTML AND CSS</string>
    <string name="javascript_heading">JavaScript</string>
    <string name="react_heading">React</string>
    <string name="nodejs_heading">Node JS</string>
    <string name="mongodb_heading">Mongo DB</string>
    <string name="array_heading">Arrays</string>
    <string name="bit_manipulation_heading">Bit Manipulation</string>
    <string name="dynamic_programming_heading">Dynamic Programming</string>
    <string name="graphs_heading">Graphs</string>
    <string name="greedy_heading">Greedy</string>
    <string name="linked_list_heading">Linked List</string>
    <string name="backtracking_heading">Recursion and Backtracking</string>
    <string name="stacks_and_queues_heading">Stack and Queue</string>
    <string name="bootstrap_and_jquery_heading">Bootstrap and Jquery</string>
    <string name="trees_heading">Trees</string>
    <string name="about_mobility_companies">
        <b>=></b> Mobility is the industry of transporting people and goods.\n
        <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
        <b>=></b> Revenue is expected to show an annual growth rate (2023-2027) of 0.12%, resulting in a projected market volume of US$12.83bn by 2027.
    </string>
    <string name="about_Ecommerce_companies">
        <b>=></b> E-commerce or Electronic commerce is the trading of goods and services on the Internet.\n
        <b>=></b> The global ecommerce growth rate for 2023 is forecast at 10.4% ,bring global ecommerce sales worldwide to $6.3 trillion.\n
        <b>=></b> India is the 8th largest market for ecommerce with a predicted revenue of US$79,923.8 million by 2023.
    </string>
    <string name="about_crm_companies">
        <b>=></b> A CRM company essentially provides a central place where businesses can store customer and prospect data, track customer interactions, and share this information with colleagues.\n
        <b>=></b> They allow businesses to manage relationships with customers, helping the business to grow.\n
    </string>
    <string name="about_cloud_companies">
        <b>=></b> Cloud service provider companies use their own data centers and compute resources to host cloud computing-based infrastructure and platform services for customer organizations.\n
        <b>=></b> Cloud services are typically priced using various pay-as-you-go subscription models.
    </string>
    <string name="about_collaboration_companies">
        <b>=></b> Collaboration tools enable employees to work together on a project without being in the same location.\n
        <b>=></b> Online collaboration tools are apps, software programs, or platforms that help businesses and their people streamline the creative process, and work together more effectively, and efficiently.
    </string>
    <string name="dynamic_programming_q1">Question 1:\n
        Given an integer array coins[ ] of size N representing different denominations of currency and an integer sum, find the number of ways you can make sum by using different combinations from coins[ ].\n
        Note: Assume that you have an infinite supply of each type of coin. \n\n
        <b>Input:</b>\n
         sum = 4, N = 3\n
         coins[] = {1,2,3}\n\n
        <b>Output:</b> 4\n\n
        <b>Explanation:</b>\n
         Four Possible ways are: {1,1,1,1},{1,1,2},{2,2},{1,3}.\n
    </string>
    <string name="code_dynamic_programming_q1">
        <b>C++ CODE:</b>\n
         long long int count(int coins[], int n, int sum) {\n
                &#160;long long int dp[n+1][sum+1];\n
                &#160;for(int i=0;i&lt;=sum;i++){\n
                    &#160;&#160;dp[0][i]=0;\n
                &#160;}\n
                &#160;for(int i=0;i&lt;=n;i++){\n
                    &#160;&#160;dp[i][0]=1;\n
                &#160;}\n
                &#160;for(int i=1;i&lt;=n;i++){\n
                    &#160;&#160;for(int j=1;j&lt;=sum;j++){\n
                        &#160;&#160;&#160;if(coins[i-1]>j){\n
                            &#160;&#160;&#160;&#160;dp[i][j]=dp[i-1][j];\n
                        &#160;&#160;&#160;}\n
                        &#160;&#160;&#160;else{\n
                            &#160;&#160;&#160;&#160;dp[i][j]=dp[i][j-coins[i-1]]+dp[i-1][j];\n
                        &#160;&#160;&#160;}\n
                    &#160;&#160;}\n\n
                &#160;}\n
                &#160;return dp[n][sum];\n
         }\n\n
        <b>JAVA CODE:</b>\n
        class Solution {\n
            &#160;public long count(int coins[], int N, int sum) {\n
                &#160;&#160;long dp[][]=new long[N+1][sum+1];\n
                &#160;&#160;for(int i=N-1;i>=0;i--){\n
                    &#160;&#160;&#160;for(int j=0;j&lt;=sum;j++){\n
                        &#160;&#160;&#160;&#160;if(j==0){\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j]=1;\n
                            &#160;&#160;&#160;&#160;&#160;continue;\n
                        &#160;&#160;&#160;&#160;}\n
                        &#160;&#160;&#160;&#160;long x=0,y=0;\n
                        &#160;&#160;&#160;&#160;if(j-coins[i]>=0)\n
                        &#160;&#160;&#160;&#160;&#160;x=dp[i][j-coins[i]];\n
                        &#160;&#160;&#160;&#160;y=dp[i+1][j];\n
                        &#160;&#160;&#160;&#160;dp[i][j]=x+y;\n
                    &#160;&#160;&#160;}\n
                &#160;&#160;}\n
                &#160;&#160;return dp[0][sum];\n
            &#160;}\n
        }\n\n
        <b>PYTHON CODE:</b>\n
        class Solution:\n
            &#160;def count(self, coins, N, Sum):\n
                &#160;&#160;dp=[[0 for i in range(Sum+1)]for j in range(N+1)]\n
                &#160;&#160;for i in range(N+1):\n
                    &#160;&#160;&#160;dp[i][0]=1\n
                &#160;&#160;for i in range(1,N+1):\n
                    &#160;&#160;&#160;for j in range(Sum+1):\n
                        &#160;&#160;&#160;&#160;if coins[i-1]&lt;=j:\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j]=dp[i][j-coins[i-1]]+dp[i-1][j]\n
                        &#160;&#160;&#160;&#160;else:\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j]=dp[i-1][j]\n
                &#160;&#160;return dp[N][Sum]\n
    </string>
    <string name="dynamic_programming_q2">Question 2:\n
        Given two sequences, find the length of longest subsequence present in both of them. Both the strings are of uppercase.\n\n
        <b>Input:</b>\n
         A = 6, B = 6\n
         str1 = ABCDGH\n
         str2 = AEDFHR\n\n
        <b>Output:</b> 3\n\n
        <b>Explanation:</b>\n
          LCS for input Sequences ABCDGH and AEDFHR is ADH of length 3..\n
    </string>
    <string name="code_dynamic_programming_q2">
        <b>C++ CODE:</b>\n
         int solve(string s1 , string s2 , int x ,int y,vector&lt;vector&lt;int>>>&amp; dp){\n
            &#160;if(x&lt;0 || y&lt;0) return 0;\n
            &#160;if(dp[x][y]!=-1) return dp[x][y];\n
            &#160;if(s1[x]==s2[y])\n
            &#160;&#160;return dp[x][y]=1+solve(s1,s2,x-1,y-1,dp);\n
            &#160;else\n
            &#160;&#160;return dp[x][y]=max(solve(s1,s2,x-1,y,dp),solve(s1,s2,x,y-1,dp));\n
         }\n
         int lcs(int x, int y, string s1, string s2){\n
            &#160;vector&lt;vector&lt;int>> dp(x+1,vector&lt;int>(y+1,-1));\n
            &#160;x--;\n
            &#160;y--;\n
            &#160;return  solve(s1,s2,x,y,dp);\n
         }\n\n
        <b>JAVA CODE:</b>\n
        class Solution{\n
            &#160;//Function to find the length of longest common subsequence in two strings.\n
            &#160;static int lcs(int m, int n, String s1, String s2){\n
                &#160;&#160;int [][]dp = new int[m+1][n+1];\n
                &#160;&#160;for(int i =0; i&lt;m; i++){\n
                    &#160;&#160;&#160;dp[i][0] =0;\n
                &#160;&#160;}\n
                &#160;&#160;for(int i =0; i&lt;n; i++){\n
                    &#160;&#160;&#160;dp[0][i] =0;\n
                &#160;&#160;}\n
                &#160;&#160;for(int i=1; i&lt;=m; i++){\n
                    &#160;&#160;&#160;for(int j =1;j&lt;=n;j++){\n
                        &#160;&#160;&#160;&#160;if(s1.charAt(i-1) == s2.charAt(j-1)){\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j] = 1+ dp[i-1][j-1];\n
                        &#160;&#160;&#160;&#160;}\n
                        &#160;&#160;&#160;&#160;else{\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j] = Math.max(dp[i-1][j],dp[i][j-1]);\n
                        &#160;&#160;&#160;&#160;}\n
                    &#160;&#160;&#160;}\n
                &#160;&#160;}\n
                &#160;&#160;return dp[m][n];\n
            &#160;}\n
        }\n\n
        <b>PYTHON CODE:</b>\n
        class Solution:\n
            &#160;#Function to find the length of longest common subsequence in two strings.\n
            &#160;def lcs(self,n,m,text1,text2):\n
                &#160;&#160;n,m=len(text1),len(text2)\n
                &#160;&#160;dp=[[0 for i in range(m+1)]for j in range(n+1)]\n
                &#160;&#160;for i in range(1,n+1):\n
                    &#160;&#160;&#160;for j in range(1,m+1):\n
                        &#160;&#160;&#160;&#160;if text1[i-1]==text2[j-1]:\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j]=dp[i-1][j-1]+1\n
                        &#160;&#160;&#160;&#160;else:\n
                            &#160;&#160;&#160;&#160;&#160;dp[i][j]=max(dp[i-1][j],dp[i][j-1])\n
                &#160;&#160;return dp[n][m]\n
    </string>
</resources>