<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FFFAF0">

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_programming_heading"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose the SDE sheet questions from below"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <androidx.cardview.widget.CardView
                android:onClick="expand_dynamic_programming_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_dynamic_programming_q1"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dynamic_programming_q1"
                        android:textSize="15dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/code_dynamic_programming_q1"
                        android:text="@string/code_dynamic_programming_q1"
                        android:visibility="gone"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:onClick="expand_dynamic_programming_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_dynamic_programming_q2"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dynamic_programming_q2"
                        android:textSize="15dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/code_dynamic_programming_q2"
                        android:text="@string/code_dynamic_programming_q2"
                        android:visibility="gone"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>